<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mahaha</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sentific_calc">SentificCalc</string>
    <string name="hintString2"></string>
    <string name="hintString1">Mahaha Digit</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_zero">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_clean">C</string>
    <string name="btn_delete"> d </string>
    <string name="btn_multi">×</string>
    <string name="btn_divide">÷</string>
    <string name="btn_add">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_sentific">···</string>
    <string name="btn_equal">=</string>
    <string name="ScreenContent">Screen for Display inputed numbers</string>
    <string name="action_unit_exchange">Unit exchange</string>
    <string name="title_activity_unit_exchange">UnitExchange</string>
    <string name="title_section1">Exchange Rate</string>
    <string name="title_section2">Length</string>
    <string name="title_section3">Area</string>
    <string name="title_section4">Weight</string>
    <string name="title_section5">volume</string>
    <string name="logo_description">this is the logo</string>
    <string name="error">error</string>

</resources>
