<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/unitDimens"
    android:orientation="vertical"
    tools:context=".CommonCalc" >

    <LinearLayout
        android:id="@+id/tr_1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/screenOne"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/unitDimens"
            android:hint="@string/hintString1"
            android:textColor="@color/green"
            android:textSize="@dimen/screenOneTextSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tr_2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/screenTwo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/hintString2"
            android:textColor="@color/orange"            
            android:gravity="right"
            android:textSize="@dimen/screenTwoTextSize" />

    </LinearLayout>
	
    <LinearLayout 
        android:id="@+id/tr_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/logo_blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="0dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo" />
       

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/tr_3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Clean"
            style="@color/btnColor"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/unitDimens"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:text="@string/btn_clean" />

        <Button
            android:id="@+id/btn_Delete"
            
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/unitDimens"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:text="@string/btn_delete" />

        <Button
            android:id="@+id/btn_Divide"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/unitDimens"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:text="@string/btn_divide" />

        <Button
            android:id="@+id/btn_Multi"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/unitDimens"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:text="@string/btn_multi" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tr_4"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/unitDimens"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:text="@string/btn_seven" />

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/unitDimens"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:text="@string/btn_eight" />

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/unitDimens"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:text="@string/btn_nine" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/unitDimens"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:text="@string/btn_minus" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tr_5"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/unitDimens"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:text="@string/btn_four" />

        <Button
            android:id="@+id/btn_five"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/unitDimens"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:text="@string/btn_five" />

        <Button
            android:id="@+id/btn_six"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/unitDimens"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:text="@string/btn_six" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/unitDimens"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:text="@string/btn_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tbCon1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/tbcCon1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="3" >

            <LinearLayout
                android:id="@+id/tr_6"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/btn_one"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/unitDimens"
                    android:layout_weight="1"
                    android:background="@color/btnColor"
                    android:text="@string/btn_one" />

                <Button
                    android:id="@+id/btn_two"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/unitDimens"
                    android:layout_weight="1"
                    android:background="@color/btnColor"
                    android:text="@string/btn_two" />

                <Button
                    android:id="@+id/btn_three"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/unitDimens"
                    android:layout_weight="1"
                    android:background="@color/btnColor"
                    android:text="@string/btn_three" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tr_7"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/btn_sentific"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/unitDimens"
                    android:layout_weight="1"
                    android:background="@color/btnColor"
                    android:text="@string/btn_sentific" />

                <Button
                    android:id="@+id/btn_zero"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/unitDimens"
                    android:layout_weight="1"
                    android:background="@color/btnColor"
                    android:text="@string/btn_zero" />

                <Button
                    android:id="@+id/btn_dot"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/unitDimens"
                    android:layout_weight="1"
                    android:background="@color/btnColor"
                    android:text="@string/btn_dot" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tbcCon2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_Equals"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/unitDimens"
                android:background="@color/btnColor"
                android:text="@string/btn_equal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>